--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Prateek Yadav</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -28,27 +28,27 @@
       <p class="skills">
 
         <div class="python">
-          <img src="images/python.png" alt="python-img">
+          <img src="/images/python.png" alt="python-img">
           <h5>Python</h5>
         </div>
 
         <div class="java">
-          <img src="images/java.png" alt="java-img">
+          <img src="/images/java.png" alt="java-img">
           <h5>Java</h5>
         </div>
 
         <div class="html">
-          <img src="images/html.png" alt="html-img">
+          <img src="/images/html.png" alt="html-img">
           <h5>HTML</h5>
         </div>
 
         <div class="css">
-          <img src="images/css.png" alt="css-img">
+          <img src="/images/css.png" alt="css-img">
           <h5>CSS</h5>
         </div>
 
         <div class="javascript">
-          <img width="100" src="images/Javascript.png" alt="python-img">
+          <img width="100" src="/images/Javascript.png" alt="python-img">
           <h5>JavaScript</h5>
         </div>
 
