--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="javascript">
-          <img width="100" src="/personal-site/images/Javascript.png" alt="python-img">
+          <img width="100" src="/personal-site/images/javascript.png" alt="js-img">
           <h5>JavaScript</h5>
         </div>
 
