--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="base">
     <div class="top">
       <h1>Prateek Yadav</h1>
       <p>Programmer for Fun.</p>
@@ -54,6 +55,6 @@
 
       </p>
     </div>
-
+    </div>
   </body>
 </html>
