--- a/index.html
+++ b/index.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Prateek Yadav</title>
-    <link rel="stylesheet" href="/personal-site/css/styles.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Smooch+Sans&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div class="base">
+
+<head>
+  <meta charset="utf-8">
+  <title>Prateek Yadav</title>
+  <link rel="stylesheet" href="/personal-site/css/styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Hubballi&family=Sacramento&family=Smooch+Sans&display=swap" rel="stylesheet">
+
+  <link rel="icon" href="gamer.png">
+</head>
+
+<body>
+  <div class="base">
     <div class="top">
+      <img src="/personal-site/images/algorithm.png" class="algo-top" alt="algorithm">
+      <img src="/personal-site/images/analytics.png" class="analytics-top" alt="analytics">
+      <img src="/personal-site/images/bar-chart.png" class="bar-chart-top" alt="bar-chart">
+      <img src="/personal-site/images/coding.png" class="coding-top" alt="coding">
+      <img src="/personal-site/images/data-analysis.png" class="data-top" alt="data-analysis">
+      <img src="/personal-site/images/domain.png" class="domain-top" alt="domain">
+      <img src="/personal-site/images/server.png" class="server-top" alt="server-top">
+      <img src="/personal-site/images/task.png" class="task-top" alt="task">
       <h1>Prateek Yadav</h1>
       <p>Programmer for Fun.</p>
+    </div>
+
+    <div class="about-me">
+      <div class="about-me-head">
+        <h1>About Me</h1>
+      </div>
+      <p>
+      <div class="about-me-para">
+        <h3>Hello,</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      </div>
+      <div class="about-me-img">
+        <img class="gamer" src="/personal-site/images/gamer.png" alt="me">
+      </div>
+      </p>
     </div>
 
     <div class="middle">
@@ -28,33 +52,34 @@
       <h1>Skills I have</h1>
       <p class="skills">
 
-        <div class="python">
-          <img src="/personal-site/images/python.png" alt="python-img">
-          <h5>Python</h5>
-        </div>
+      <div class="python">
+        <img src="/personal-site/images/python.png" alt="python-img">
+        <h5>Python</h5>
+      </div>
 
-        <div class="java">
-          <img src="/personal-site/images/java.png" alt="java-img">
-          <h5>Java</h5>
-        </div>
+      <div class="java">
+        <img src="/personal-site/images/java.png" alt="java-img">
+        <h5>Java</h5>
+      </div>
 
-        <div class="html">
-          <img src="/personal-site/images/html.png" alt="html-img">
-          <h5>HTML</h5>
-        </div>
+      <div class="html">
+        <img src="/personal-site/images/html.png" alt="html-img">
+        <h5>HTML</h5>
+      </div>
 
-        <div class="css">
-          <img src="/personal-site/images/css.png" alt="css-img">
-          <h5>CSS</h5>
-        </div>
+      <div class="css">
+        <img src="/personal-site/images/css.png" alt="css-img">
+        <h5>CSS</h5>
+      </div>
 
-        <div class="javascript">
-          <img width="100" src="/personal-site/images/javascript.png" alt="js-img">
-          <h5>JavaScript</h5>
-        </div>
+      <div class="javascript">
+        <img src="/personal-site/images/Javascript.png" alt="js-img">
+        <h5>JavaScript</h5>
+      </div>
 
       </p>
     </div>
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
