--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Hubballi&family=Sacramento&family=Smooch+Sans&display=swap" rel="stylesheet">
 
-  <link rel="icon" href="gamer.png">
+  <link rel="icon" href="/personal-site/gamer.png">
 </head>
 
 <body>
