--- a/index.html
+++ b/index.html
@@ -8,78 +8,95 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Hubballi&family=Sacramento&family=Smooch+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Hubballi&family=League+Spartan:wght@300&family=Sacramento&family=Smooch+Sans&display=swap" rel="stylesheet">
 
   <link rel="icon" href="/personal-site/gamer.png">
 </head>
 
 <body>
-  <div class="base">
-    <div class="top">
-      <img src="/personal-site/images/algorithm.png" class="algo-top" alt="algorithm">
-      <img src="/personal-site/images/analytics.png" class="analytics-top" alt="analytics">
-      <img src="/personal-site/images/bar-chart.png" class="bar-chart-top" alt="bar-chart">
-      <img src="/personal-site/images/coding.png" class="coding-top" alt="coding">
-      <img src="/personal-site/images/data-analysis.png" class="data-top" alt="data-analysis">
-      <img src="/personal-site/images/domain.png" class="domain-top" alt="domain">
-      <img src="/personal-site/images/server.png" class="server-top" alt="server-top">
-      <img src="/personal-site/images/task.png" class="task-top" alt="task">
-      <h1>Prateek Yadav</h1>
-      <p>Programmer for Fun.</p>
-    </div>
+  <div class="top">
+    <img src="/personal-site/images/algorithm.png" class="top-img" alt="algorithm">
+    <img src="/personal-site/images/analytics.png" class="top-img" alt="analytics">
+    <img src="/personal-site/images/bar-chart.png" class="top-img" alt="bar-chart">
+    <img src="/personal-site/images/coding.png" class="top-img" alt="coding">
+    <img src="/personal-site/images/data-analysis.png" class="top-img" alt="data-analysis">
+    <img src="/personal-site/images/domain.png" class="top-img" alt="domain">
+    <img src="/personal-site/images/server.png" class="top-img" alt="server-top">
+    <img src="/personal-site/images/task.png" class="top-img" alt="task">
+    <h1>Prateek Yadav</h1>
+    <p>Programmer for Fun.</p>
+  </div>
 
-    <div class="about-me">
-      <div class="about-me-head">
-        <h1>About Me</h1>
-      </div>
-      <p>
-      <div class="about-me-para">
-        <h3>Hello,</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-      </div>
-      <div class="about-me-img">
-        <img class="gamer" src="/personal-site/images/gamer.png" alt="me">
-      </div>
+  <div class="about-me">
+    <div class="about-me-head">
+      <h1>About Me</h1>
+    </div>
+    <div class="about-me-img">
+      <img class="gamer" src="/personal-site/images/gamer.png" alt="me">
+    </div>
+    <div class="about-me-para">
+      <p><h3>Hola!</h3>
+        <br>
+        I'm a programmer based in Delhi, India.
+        <br>
+        I code for fun. Away from my desk I like to play cricket and watch anime.
       </p>
     </div>
+  </div>
 
-    <div class="middle">
-      <p>Currently working at</p>
-      <h1>HCLTech</h1>
-    </div>
+  <div class="middle">
+    <p>Currently working at</p>
+    <h1>HCLTech</h1>
+  </div>
 
-    <div class="bottom">
-      <h1>Skills I have</h1>
-      <p class="skills">
+  <div class="bottom">
+    <h1>Skills I have</h1>
+    <div class="skills">
 
       <div class="python">
-        <img src="/personal-site/images/python.png" alt="python-img">
+        <img class="top-img" src="/personal-site/images/python.png" alt="python-img">
         <h5>Python</h5>
       </div>
 
       <div class="java">
-        <img src="/personal-site/images/java.png" alt="java-img">
+        <img class="top-img" src="/personal-site/images/java.png" alt="java-img">
         <h5>Java</h5>
       </div>
 
       <div class="html">
-        <img src="/personal-site/images/html.png" alt="html-img">
+        <img class="top-img" src="/personal-site/images/html.png" alt="html-img">
         <h5>HTML</h5>
       </div>
 
       <div class="css">
-        <img src="/personal-site/images/css.png" alt="css-img">
+        <img class="top-img" src="/personal-site/images/css.png" alt="css-img">
         <h5>CSS</h5>
       </div>
 
       <div class="javascript">
-        <img src="/personal-site/images/javascript.png" alt="js-img">
+        <img class="top-img" src="/personal-site/images/javascript.png" alt="js-img">
         <h5>JavaScript</h5>
       </div>
-
-      </p>
     </div>
+
+      <img class="mountain" src="https://web.archive.org/web/20180831175228/http://seanhalpin.io/assets/img/content/home/masthead/land.svg" alt="mountain" />
+
   </div>
+
+  <div class="contact-me">
+    <h1>Get In Touch</h1>
+    <h3>If you also like Anime and cricket</h3><br>
+    <p class="contact-me-msg">Like 7th hokage? then lets connect, we'll build together.</p><br>
+    <a class="btn" href="mailto:yadavprateek39@gmail.com">Contact Me</a>
+  </div>
+
+  <div class="footer">
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.linkedin.com/">Linkedin</a>
+    <a class="footer-link" href="https://github.com/prateekYadav07">Github</a><br><br>
+    <p class="copyright">© 2022 Prateek Yadav .</p>
+  </div>
+
 </body>
 
 </html>
