--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         <img src="./images/domain.png" class="top-img" alt="domain">
         <img src="./images/server.png" class="top-img" alt="server-top">
       </div>
-
+      <div class="quote-con">
+        <p class="quote">“Stay hungry. Stay foolish.”</p><span class="author"> ~ Steve Jobs</span>
+      </div>
       <h1>Prateek Yadav</h1>
-      <p>Programmer for Fun.</p>
+      <p class="quote">Programmer for Fun.</p>
     </div>
 
     <div class="about-me">
